# bastli-backdoor-nfc-reader

./: .gitignore  CMakeLists.txt  README  README.md  install_windows_nfc.md  openssl.supp  reader.conf
config/: backdoor-opener.service  backdoor-reader.service  backdoor.conf  backdoor.service
modules/: Findlibfreefare.cmake  Findlibnfc.cmake  Findlibrabbitmq.cmake  Findsimpleamqpclient.cmake  FindwiringPi.cmake
src/: MifareDesfireKey.hpp  NfcContext.cpp  NfcContext.hpp  NfcDevice.cpp  NfcDevice.hpp  NfcException.hpp  NfcTagList.hpp  NfcTokenReader.cpp  NfcTokenReader.hpp  NfcTypes.hpp  bd_client.cpp  bd_client.hpp  cache_entry.h  command.cpp  command.h  config.h  locked_queue.cpp  locked_queue.h  nfc-reader.cpp  nfc_opener.cpp  nfc_personalize.cpp  nfc_reader.cpp  nfc_reader_amqp.cpp  nfc_reset.cpp  nfc_test_client.cpp  nfc_test_producer.cpp  opener.cpp  opener.h  string_queue.cpp  string_queue.h  tests.cpp  token.cpp  token.h
